deps/jansson/test/suites/invalid/object-no-value/error.strip
1 5 5
unexpected token near end of file
